--- a/styles/styles.css
+++ b/styles/styles.css
@@ -112,6 +112,7 @@ body {
 .advantages-description {
   font-size: 22px;
   line-height: 26px;
+  color: #333333;
 }
 
 .advantages-item {
@@ -126,12 +127,20 @@ body {
   text-transform: uppercase;
 }
 
+.advantages-text-description {
+  color: #333333;
+}
+
 .advantages-item.imaged {
   color: #ffffff;
   background-color: #82B3D3;
 }
 
 .imaged .advantages-text-title {
+  color: #ffffff;
+}
+
+.imaged .advantages-text-description {
   color: #ffffff;
 }
 
@@ -169,6 +178,7 @@ body {
 .service-about {
   font-size: 22px;
   line-height: 26px;
+  color: #333333;
 }
 
 .service-title {
@@ -177,6 +187,10 @@ body {
   font-weight: 700;
   text-transform: uppercase;
   color: #000000;
+}
+
+.service-description {
+  color: #333333;
 }
 
 /* Search */
@@ -192,6 +206,13 @@ body {
   font-size: 30px;
   line-height: 36px;
   text-transform: uppercase;
+}
+
+.search-description {
+  font-size: 22px;
+  line-height: 26px;
+  text-align: center;
+  color: #333333;
 }
 
 .search-button {
@@ -257,6 +278,7 @@ body {
 
 .page-footer {
   background-color: #ffffff;
+  color: #000000;
 }
 
 .social {
