--- a/styles/styles.css
+++ b/styles/styles.css
@@ -41,6 +41,10 @@ img {
 }
 
 .button {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  padding: 8px;
   font-family: inherit;
   font-size: 16px;
   line-height: 20px;
@@ -49,7 +53,11 @@ img {
   text-decoration: none;
   text-transform: uppercase;
   color: #ffffff;
+  border: none;
+  border-radius: 4px;
   background-color: transparent;
+  cursor: pointer;
+  box-sizing: border-box;
 }
 
 .visually-hidden {
@@ -70,11 +78,16 @@ img {
 
 .site-logo {
   display: block;
+  position: relative;
   flex-shrink: 0;
+  width: 140px;
 }
 
 .site-logo-image {
-  width: 140px;
+  width: 100%;
+  position: relative;
+  z-index: 1;
+  margin-bottom: -6px;
   display: block;
 }
 
@@ -89,12 +102,13 @@ img {
   display: flex;
   flex-wrap: wrap;
   margin: 0;
-  padding: 0;
   margin-right: auto;
-  list-style: none;
+  padding: 0;
+  list-style-type: none;
 }
 
 .navigation-link {
+  position: relative;
   display: block;
   padding: 20px 16px;
   color: inherit;
@@ -106,20 +120,22 @@ img {
   background-color: #ffffff;
 }
 
-.navigation-link:not(.button) {
-  display: block;
-  min-width: 20px;
-  min-height: 20px;
-  padding: 22px 12px;
+.navigation-link[aria-current="page"]::after {
+  content: "";
+  position: absolute;
+  right: 16px;
+  left: 16px;
+  bottom: -1px;
+  height: 2px;
+  background-color: #756257;
 }
 
-.navigation-user {
+.navigation-user-list {
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
   margin: 0;
   padding: 0;
-  list-style: none;
+  list-style-type: none;
 }
 
 .navigation-user-item {
@@ -127,20 +143,59 @@ img {
 }
 
 .navigation-user-item:has(.button) {
+  align-self: center;
   margin-left: 20px;
 }
 
-.navigation-badge {
+.navigation-user-link {
+  text-decoration: none;
+}
+
+.navigation-user-link:not(.button) {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 20px;
+  padding: 22px 12px;
+}
+
+.navigation-user-link:not(.button)::before {
+  content: "";
+  width: 20px;
+  height: 20px;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.navigation-user-link-search::before {
+  background-image: url("../images/decor/search.svg");
+  background-size: 19px 19px;
+}
+
+.navigation-user-link-fav::before {
+  background-image: url("../images/decor/heart.svg");
+  background-size: 18px 17px;
+}
+
+.navigation-user-link.button {
+  padding: 8px;
+  padding-inline: 34px;
+}
+
+.navigation-badge {
+  position: absolute;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
   min-width: 20px;
+  aspect-ratio: 1 / 1;
   font-size: 10px;
   text-align: center;
   line-height: 10px;
   color: #ffffff;
+  border-radius: 50%;
   background-color: #7db54f;
+  transform: translate(7px, -11px);
 }
 
 /* Buttons */
@@ -157,6 +212,7 @@ img {
 
 .card-fav {
   background-color: #82B3D3;
+  padding-block: 8px;
 }
 
 .fav-added {
@@ -226,7 +282,7 @@ main {
 }
 
 .advantages .advantages-description {
-  margin-bottom: 69px;
+  margin-bottom: 90px;
 }
 
 .advantages-list {
@@ -253,13 +309,23 @@ main {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 62px;
+  gap: 30px;
   width: 400px;
-  padding: 85px;
+  padding: 32px 85px;
   box-sizing: border-box;
 }
 
+.advantages-text::before {
+  content: "";
+  order: 2;
+  width: 60px;
+  height: 2px;
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
 .advantages-text-title {
+  order: 1;
+  text-wrap: balance;
   max-width: 175px;
   margin: 0;
   color: #000000;
@@ -270,6 +336,7 @@ main {
 }
 
 .advantages-text-description {
+  order: 3;
   margin: 0;
   font-size: 18px;
   line-height: 21px;
@@ -280,6 +347,10 @@ main {
   width: 1200px;
   color: #ffffff;
   background-color: #82B3D3;
+}
+
+.imaged .advantages-text::before {
+  color: rgba(255, 255, 255, 0.3);
 }
 
 .imaged .advantages-text-title {
@@ -332,7 +403,7 @@ main {
   margin: 0;
   padding: 0;
   text-align: center;
-  list-style: none;
+  list-style-type: none;
 }
 
 .service-item {
@@ -341,8 +412,8 @@ main {
   align-items: center;
   gap: 30px;
   width: 400px;
-  min-height: 400px;
-  padding: 81px 85px;
+  min-height: 385px;
+  padding: 78px 85px;
   background-color: #a1a0a0;
   box-sizing: border-box;
 }
@@ -351,8 +422,10 @@ main {
   content: "";
   display: block;
   flex-shrink: 0;
-  width: 75px;
-  height: 72px;
+  width: 76px;
+  height: 76px;
+  background-position: center bottom;
+  background-repeat: no-repeat;
 }
 
 .service-item.light {
@@ -363,7 +436,23 @@ main {
   background-color: #83B3D31F;
 }
 
+.service-item-hotel::before {
+  background-image: url("../images/service/service-hotel.svg");
+  background-size: 76px 72px;
+}
+
+.service-item-food::before {
+  background-image: url("../images/service/service-food.svg");
+  background-size: 75px 70px;
+}
+
+.service-item-souvenir::before {
+  background-image: url("../images/service/service-souvenir.svg");
+  background-size: 65px 76px;
+}
+
 .service-title {
+  margin: 0;
   font-size: 24px;
   line-height: 28px;
   font-weight: 700;
@@ -372,7 +461,9 @@ main {
 }
 
 .service-description {
+  margin: 0;
   color: #333333;
+  text-wrap: pretty;
 }
 
 /* Search */
@@ -384,7 +475,7 @@ main {
 }
 
 .search-title {
-  margin-bottom: 20px;
+  margin-bottom: 21px;
   color: #000000;
   font-weight: 700;
   font-size: 30px;
@@ -427,7 +518,7 @@ main {
 }
 
 .subscribe-title {
-  margin-bottom: 20px;
+  margin-bottom: 21px;
   font-size: 30px;
   line-height: 36px;
   font-weight: 700;
@@ -446,11 +537,14 @@ main {
 }
 
 .subscribe-form {
-  display: flex;
-  justify-content: center;
+  display: inline-flex;
+  position: relative;
 }
 
 .subscribe-control {
+  position: absolute;
+  top: 14px;
+  left: 20px;
   font-size: 18px;
   line-height: 1.33;
   color: #000000;
@@ -459,24 +553,26 @@ main {
 
 .subscribe-input {
   min-width: 452px;
-  padding: 0;
+  padding: 12px 20px;
   font-family: inherit;
   color: #000000;
   font-weight: 400;
   font-size: 18px;
   line-height: 24px;
   background-color: #F2F2F2;
+  border: none;
+  border-radius: 4px 0 0 4px;
   box-sizing: border-box;
 }
 
 .subscribe-button {
-  min-width: 232px;
   font-size: 20px;
   line-height: 36px;
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
   background-color: #82B3D3;
   color: #ffffff;
+  border-radius: 0 4px 4px 0;
 }
 
 /* Page-footer */
@@ -484,8 +580,9 @@ main {
 .page-footer {
   display: flex;
   flex-wrap: wrap;
+  align-items: center;
   gap: 28px;
-  padding-block: 40px 30px;
+  padding-block: 45px 35px;
   padding-inline: 70px;
   background-color: #ffffff;
   color: #000000;
@@ -502,7 +599,7 @@ main {
   flex-wrap: wrap;
   margin: 0;
   padding: 0;
-  list-style: none;
+  list-style-type: none;
 }
 
 .social-item {
@@ -511,30 +608,34 @@ main {
 
 .social-link {
   display: block;
-  min-width: 47px;
-  min-height: 40px;
-  color: inherit;
-  font-family: inherit;
-  text-decoration: none;
-  font-weight: 400;
+  position: relative;
+  width: 47px;
+  height: 40px;
+  color: #83b3d3;
 }
 
-.social-vk {
-  background-image: url("../images/social/social-vk.svg");
-  background-repeat: no-repeat;
-  background-size: cover;
+.social-link::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background-color: currentColor;
+  mask-position: center;
+  mask-repeat: no-repeat;
 }
 
-.social-telegram {
-  background-image: url("../images/social/social-telegram.svg");
-  background-repeat: no-repeat;
-  background-size: cover;
+.social-vk::before {
+  mask-image: url("../images/social/social-vk.svg");
+  mask-size: 25px 15px;
 }
 
-.social-youtube {
-  background-image: url("../images/social/social-youtube.svg");
-  background-repeat: no-repeat;
-  background-size: cover;
+.social-telegram::before {
+  mask-image: url("../images/social/social-telegram.svg");
+  mask-size: 18px 16px;
+}
+
+.social-youtube::before {
+  mask-image: url("../images/social/social-youtube.svg");
+  mask-size: 23px 18px;
 }
 
 .contacts {
@@ -561,9 +662,23 @@ main {
 }
 
 .site-author {
+  position: relative;
   display: block;
   flex-shrink: 0;
   width: 115px;
+  height: 34px;
+  color: #000000;
+}
+
+.site-author::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background-color: currentColor;
+  mask-image: url("../images/htmlacademy.svg");
+  mask-position: center;
+  mask-repeat: no-repeat;
+  mask-size: 115px 34px;
 }
 
 /* Catalog */
@@ -605,7 +720,35 @@ main {
   margin-bottom: 40px;
   padding: 0;
   color: #ffffff;
-  list-style: none;
+  list-style-type: none;
+}
+
+.breadcrumbs-item {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.breadcrumbs-item:first-child {
+  flex-shrink: 0;
+}
+
+.breadcrumbs-item::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  right: -18px;
+  width: 8px;
+  height: 11px;
+  background-image: url("../images/decor/arrow-right.svg");
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  transform: translateY(-50%);
+}
+
+.breadcrumbs-item:last-child::after {
+  content: none;
 }
 
 .breadcrumbs-link {
@@ -619,8 +762,12 @@ main {
 
 .breadcrumbs-link-home {
   display: block;
-  min-width: 13px;
-  min-height: 13px;
+  width: 13px;
+  height: 13px;
+  background-image: url("../images/decor/home.svg");
+  background-size: 13px 13px;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 /* Catalog-filter-form */
@@ -636,6 +783,7 @@ main {
   min-width: 150px;
   margin: 0;
   padding: 0;
+  border: none;
 }
 
 .form-filter-group:nth-child(2) {
@@ -648,7 +796,16 @@ main {
   gap: 16px;
   margin: 0;
   padding: 0;
-  list-style: none;
+  list-style-type: none;
+}
+
+.form-filter-item {
+  display: flex;
+}
+
+.form-filter-input {
+  margin: 0;
+  appearance: none;
 }
 
 .form-filter-title {
@@ -661,27 +818,94 @@ main {
 }
 
 .form-filter-control {
+  position: relative;
+  display: flex;
+  align-items: center;
+  gap: 16px;
   font-size: 18px;
   line-height: 23px;
 }
 
-.form-filter-control-text {
-  font-size: 18px;
-  line-height: 1.33;
-  text-transform: lowercase;
-  opacity: 0.3;
+.form-filter-control::before {
+  content: "";
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 20px;
+  height: 20px;
+  background-color: #ffffff;
+  box-sizing: border-box;
 }
 
-.form-filter-input-cost {
+.form-filter-control-box::before {
+  border-radius: 4px;
+}
+
+.form-filter-control-radio::before {
+  border: 5px solid #ffffff;
+  border-radius: 50%;
+}
+
+.form-filter-input:checked ~ .form-filter-control-box::before {
+  background-image: url("../images/decor/check.svg");
+  background-size: 13px 11px;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.form-filter-input:checked ~ .form-filter-control-radio::before {
+  background-color: #3f5e72;
+}
+
+.form-filter-range-group {
+  display: flex;
+  gap: 2px;
+  margin: 0;
+}
+
+.form-filter-range-control {
+  position: relative;
+}
+
+.form-filter-range-text {
+  position: absolute;
+  top: 50%;
+  right: 20px;
+  font-size: 18px;
+  line-height: 24px;
+  text-transform: lowercase;
+  color: #000000;
+  opacity: 0.3;
+  transform: translateY(-50%);
+}
+
+.form-filter-range-input {
   min-width: 143px;
   margin: 0;
-  padding: 0;
+  padding-inline: 20px 45px;
+  padding-block: 12px;
   box-sizing: border-box;
   font-family: inherit;
   font-weight: 700;
   font-size: 18px;
   line-height: 24px;
   background-color: #f2f2f2;
+  border: none;
+  appearance: textfield;
+}
+
+.form-filter-range-input::-webkit-outer-spin-button,
+.form-filter-range-input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.form-filter-range-input-min {
+  border-radius: 4px 0 0 4px;
+}
+
+.form-filter-range-input-max {
+  border-radius: 0 4px 4px 0;
 }
 
 .form-filter-buttons {
@@ -693,11 +917,13 @@ main {
 
 .filter-button-apply {
   background-color: #82B3D3;
+  padding-inline: 50px;
 }
 
 .filter-button-reset {
   background-color: transparent;
   border-color: transparent;
+  padding-inline: 50px;
 }
 
 /* Catalog-results */
@@ -711,7 +937,6 @@ main {
   grid-template-columns: 1fr auto auto;
   column-gap: 70px;
   row-gap: 40px;
-  align-items: top;
   padding-inline: 70px;
   padding-block: 50px 60px;
   background-color: #ffffff;
@@ -719,6 +944,7 @@ main {
 
 .catalog-results-title {
   grid-area: heading;
+  align-self: center;
   color: #000000;
   font-weight: 700;
   font-size: 30px;
@@ -731,23 +957,30 @@ main {
 .select-control {
   min-width: 292px;
   grid-area: select;
-  padding: 12px 20px;
+  padding: 12px 18px;
   font-family: inherit;
   color: #333333;
   font-size: 18px;
   line-height: 21px;
   font-weight: 400;
   background-color: #ffffff;
+  background-image: url("../images/decor/arrow-down.svg");
+  background-size: 12px 9px;
+  background-position: center right 18px;
+  background-repeat: no-repeat;
+  border: 2px solid #e5e5e5;
+  border-radius: 4px;
   box-sizing: border-box;
+  appearance: none;
 }
 
 .catalog-view-list {
-  display: flex;
   grid-area: view;
+  display: flex;
   gap: 8px;
   margin: 0;
   padding: 0;
-  list-style: none;
+  list-style-type: none;
 }
 
 .view-item {
@@ -756,26 +989,57 @@ main {
 
 .view-button {
   display: block;
-  min-width: 48px;
-  min-height: 48px;
+  width: 48px;
+  height: 48px;
+  box-sizing: border-box;
   background-color: #ffffff;
+  background-position: center;
+  background-size: 16px 14px;
+  background-repeat: no-repeat;
+  border: 2px solid #e5e5e5;
+}
+
+.button-tile {
+  background-image: url("../images/view/view-tile.svg");
+}
+
+.button-card {
+  background-image: url("../images/view/view-card.svg");
+}
+
+.button-list {
+  background-image: url("../images/view/view-list.svg");
 }
 
 /* Result-card */
 
 .result-list {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
   gap: 20px;
   grid-area: catalog;
   margin: 0;
   padding: 0;
-  list-style: none;
+  list-style-type: none;
 }
 
 .result-card {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 212px 1fr repeat(3, auto);
+  gap: 16px 20px;
   width: 340px;
+  padding: 20px;
   background-color: #ffffff;
+  box-sizing: border-box;
+  border-radius: 4px;
+  box-shadow: 0 0 0 1px #e6e6e6;
+}
+
+.card-link {
+  grid-column: 1 / -1;
+  font-family: inherit;
+  text-decoration: none;
 }
 
 .card-image {
@@ -783,9 +1047,8 @@ main {
   width: 300px;
 }
 
-.card-link {
-  font-family: inherit;
-  text-decoration: none;
+.card-title {
+  margin: 0;
   color: #000000;
   font-size: 24px;
   line-height: 28px;
@@ -793,8 +1056,24 @@ main {
 }
 
 .card-type, .card-price {
+  margin: 0;
   font-size: 18px;
   line-height: 21px;
+  overflow-wrap: anywhere;
+}
+
+.card-price {
+  justify-self: end;
+}
+
+.card-details {
+  padding-block: 8px;
+}
+
+.card-stars {
+  display: flex;
+  align-items: center;
+  margin: 0;
 }
 
 .card-stars-two {
@@ -816,6 +1095,8 @@ main {
 }
 
 .card-rating {
+  margin: 0;
+  padding-block: 9px 8px;
   background-color: #F2F2F2;
   font-size: 16px;
   line-height: 20px;
@@ -832,8 +1113,9 @@ main {
   grid-area: pagination;
   margin: 0;
   padding: 0;
-  padding-top: 40px;
-  list-style: none;
+  padding-top: 39px;
+  list-style-type: none;
+  border-top: 1px solid #e6e6e6;
 }
 
 .pagination-link {
@@ -861,7 +1143,7 @@ main {
   display: block;
   min-width: 60px;
   min-height: 60px;
-  padding: 16px 21px;
+  padding: 17px 21px;
   font-size: 22px;
   line-height: 26px;
   color: #000000;
